# python-oop-project-101

./: Makefile  README.md  pyproject.toml
tests/: base_validator_test.py  contains_validator_test.py  len_validator_test.py  required_validator_test.py  validator_test.py
validator/: validator.py
validator/schemas/: __init__.py  schema.py  string_schema.py
validator/validators/: __init__.py  base_validator.py  contains_validator.py  len_validator.py  required_validator.py
